@@ -308,7 +308,7 @@ class tx_templavoila_template {
 	public function getBeLayout() {
 		$beLayout = FALSE;
 		if ($this->row['belayout']) {
-			$beLayout = t3lib_div::getURL(PATH_site . t3lib_div::getFileAbsFileName($this->row['belayout']));
+			$beLayout = t3lib_div::getURL(t3lib_div::getFileAbsFileName($this->row['belayout']));
 		} else {
 			$beLayout = $this->getDatastructure()->getBeLayout();
 		}
